Fix issue with nested vertical scrollbars in messages

--- a/app/static/email-frame.less
+++ b/app/static/email-frame.less
@@ -57,6 +57,7 @@
     margin: 0;
     padding: 0;
     overflow-x: auto;
+    overflow-y: hidden;
 
     -webkit-text-size-adjust: auto;
     word-wrap: break-word;
@@ -82,7 +83,6 @@
     padding: 0;
     margin: auto;
     max-width: 840px;
-    overflow-y: hidden;
     word-break: break-word;
     -webkit-font-smoothing: antialiased;
   }
@@ -100,10 +100,6 @@
   }
   a img {
     border-bottom: 0;
-  }
-
-  body.heightDetermined {
-    overflow-y: hidden;
   }
 
   div,
